human input halluicination is gone

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,18 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9feb9d4a",
+   "execution_count": null,
+   "id": "5b879f6a",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\NOCHU\\Documents\\VSCode\\Projects\\langchain_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Sliding Window Attention is enabled but not implemented for `sdpa`; unexpected results may be encountered.\n",
       "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Human: hi, how are you doing today\n",
+      "Machine: hi, i'm doing well, thanks.\n",
+      "Human\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Human: hi\n",
+      "Human: Human: hi, how are you doing today\n",
+      "Machine: hi, i'm doing well, thanks.\n",
+      "Human\n",
+      "Human: what are you up to?\n",
+      "Machine: i'm currently taking notes to assist you.\n",
+      "Human: how's your note taking\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Human: hi\n",
+      "Human: Human: hi, how are you doing today\n",
+      "Machine: hi, i'm doing well, thanks.\n",
+      "Human\n",
+      "Human: what are you up to?\n",
+      "Human: Human: hi\n",
+      "Human: Human: hi, how are you doing today\n",
+      "Machine: hi, i'm doing well, thanks.\n",
+      "Human\n",
+      "Human: what are you up to?\n",
+      "Machine: i'm currently taking notes to assist you.\n",
+      "Human: how's your note taking\n",
+      "Human: what can you do to assist me?\n",
+      "Machine\n",
+      "\n",
+      "Machine: as a text-based virtual assistant, i can provide information and carry\n"
      ]
     }
    ],
@@ -25,63 +60,54 @@
     "from langchain_core.messages import AIMessage\n",
     "from langgraph.checkpoint.memory import MemorySaver\n",
     "from langgraph.graph import START, MessagesState, StateGraph\n",
-    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
-    "from langchain_core.messages import SystemMessage, trim_messages\n",
+    "\n",
+    "memory = MemorySaver()\n",
+    "tokenizer = transformers.AutoTokenizer.from_pretrained(\"HuggingFaceTB/SmolLM2-1.7B-Instruct\")\n",
+    "hf_model =transformers.AutoModelForCausalLM.from_pretrained(\"HuggingFaceTB/SmolLM2-1.7B-Instruct\", torch_dtype=\"auto\", device_map=\"auto\")\n",
+    "pipeline = transformers.pipeline(\n",
+    "    \"text-generation\",\n",
+    "    model=hf_model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    "    device_map=\"auto\",\n",
+    "    do_sample=True,\n",
+    "    top_k=10,\n",
+    "    num_return_sequences=1,\n",
+    "    eos_token_id=tokenizer.eos_token_id,\n",
+    "    pad_token_id=tokenizer.eos_token_id,\n",
+    ")\n",
+    "\n",
+    "model = HuggingFacePipeline(pipeline=pipeline)\n",
+    "\n",
+    "# Define a new graph\n",
+    "workflow = StateGraph(state_schema=MessagesState)\n",
     "\n",
     "# Add memory\n",
     "memory = MemorySaver()\n",
-    "tokenizer = transformers.AutoTokenizer.from_pretrained(\"Qwen/Qwen2.5-1.5B-Instruct\")\n",
-    "hf_model =transformers.AutoModelForCausalLM.from_pretrained(\"Qwen/Qwen2.5-1.5B-Instruct\",  torch_dtype=\"auto\", device_map=\"auto\")\n",
-    "pipeline = transformers.pipeline( \"text-generation\", model = hf_model, tokenizer = tokenizer, torch_dtype = torch.bfloat16,\n",
-    "                                    do_sample=True,top_k=10,num_return_sequences=1,eos_token_id=tokenizer.eos_token_id,pad_token_id=tokenizer.eos_token_id)\n",
     "\n",
-    "model = HuggingFacePipeline(pipeline=pipeline)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b4696806",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\NOCHU\\AppData\\Local\\Temp\\ipykernel_8796\\4107024599.py:7: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-      "  chain = LLMChain(llm= model, prompt= prompt)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from langchain import PromptTemplate, LLMChain\n",
+    "async def call_model(state: MessagesState):\n",
+    "    response = await model.ainvoke(state[\"messages\"])\n",
+    "    return {\"messages\": response}\n",
     "\n",
-    "prompt = PromptTemplate(\n",
-    "    input_variable=[\"content\"],\n",
-    "    template = \"{content}\"\n",
-    ")\n",
-    "chain = LLMChain(llm= model, prompt= prompt)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2f574817",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"hi, how are you? Hi! I'm doing well, thanks for asking. How about you? I'm just a\""
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain.run(\"hi, how are you\")"
+    "# Define graph as before:\n",
+    "workflow = StateGraph(state_schema=MessagesState)\n",
+    "workflow.add_edge(START, \"model\")\n",
+    "workflow.add_node(\"model\", call_model)\n",
+    "app = workflow.compile(checkpointer=MemorySaver())\n",
+    "\n",
+    "config = {\"configurable\": {\"thread_id\": \"abc789\"}}\n",
+    "\n",
+    "\n",
+    "for i in range(10):\n",
+    "    query = input(\"enter a prompt\")\n",
+    "\n",
+    "    input_messages = [HumanMessage(query)]\n",
+    "\n",
+    "    # Async invocation:\n",
+    "    output = await app.ainvoke({\"messages\": input_messages}, config)\n",
+    "    output[\"messages\"][-1].pretty_print()\n",
+    "\n",
+    "\n"
    ]
   }
  ],
